# quote-server

./: .gitignore  Cargo.toml  LICENSE  README.md  dockerfile
api/: Cargo.toml
api/src/: json.rs  lib.rs  template.rs
api/templates/: author.html  authors.html  base.html  error.html  quote.html  quote_form.html  quotes.html  tag.html  tags.html
entity/: Cargo.toml
entity/src/: author.rs  lib.rs  mod.rs  prelude.rs  quote.rs  quote_tag_association.rs  tag.rs
migration/src/: lib.rs  m20240424_000001_create_quote_table.rs  m20250430_133655_create_tags_table.rs  m20250506_145225_create_author_table.rs
service/: Cargo.toml
service/src/: data_access.rs  data_transfer_objects.rs  lib.rs
src/: main.rs
static/assets/: quotes.json
templates/: quotes.html
