[package]
name = "quote-server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.13.1"
axum = "0.8.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
sea-orm = { version = "1.1.10", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }

