[package]
name = "quote-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "entity", "migration", "service"]

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.3", features = ["macros"]}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
sea-orm = { version = "1.1.10", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
clap = { version = "4.5.37", features = ["derive"] }
entity = { path = "./entity" }
service = { path = "./service" }
migration = { path = "./migration" }
api = { path = "./api" }
thiserror = "2.0.12"
displaydoc = "0.2.5"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
trace = "0.1.7"
tracing = "0.1.41"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
