[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type= ["lib"]

[dependencies]
tower-http = { version = "0.6.2", features = ["trace"] }
service = { path = "../service" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.12"
displaydoc = "0.2.5"
askama = "0.14.0"
trace = "0.1.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.3", features = ["macros"]}
sea-orm = { version = "1.1.10", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }